--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>楞伽山人</title>
+    <title>bookxiao</title>
     <link rel="shortcut icon" type="image/png" href="/images/heng.png">
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
@@ -43,26 +43,10 @@
 <span class="octicon octicon-link"> Projects Lists </span>
 </a>
 </h1>
-<a href="http://machinelearning.me">-WEI'S MACHINE LEARNING PLAN</a>
-<br>
-Another personal machine learning study notes, aimed to build cool projects based on machine learning techniques. Still pending on cool ideas, knowledge bases and of course, free time after work. <img src="assets/img/blog/machine_learning_jokes.jpg">
-<a href="#">-PRESENTATIONS </a><br />
-<ul>
-<li>
-<a href="/assets/downloads/cbi_nlp.pdf" style="color:#C30000">NLP Introduction and Practises</a> 
-</li>
-<li>
-<a href="/assets/downloads/dm_introduction.pdf" style="color:#C30000">DW Introduction</a>
-</li>
-<li>
-<a href="/assets/downloads/ijcai_hlda.pdf" style="color:#C30000">IJCAI Hierarchical Latent Dirichlet Allocation</a>
-</li>
-</ul>
-
         <div class="footer">
-            <div class="copyright">
-                Personal technical blog for software development practices, reading notes on ML, NLP.
-                <br/> &copy; 2013&mdash;2015 by HengWei. All Rights Reserved.
+            <div class="copyleft">
+                Personal technical blog for software development practices, reading notes on Linux kernel.
+                <br/> &copy; 2016&mdash;2018 by WangShuxiao. All Rights Reserved.
             </div>
         </div>
     </div>
